--- a/style.css
+++ b/style.css
@@ -1,5 +1,76 @@
 * {
-  box-sizing: border-box;
-  margin: 0;
-  words
+  /*box-sizing: border-box;*/
+  margin: 0 auto;
+
+}
+
+html {
+  background: url(https://s-media-cache-ak0.pinimg.com/736x/05/71/c0/0571c02063ea91a8dca4c75858712609.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+body {
+  background-repeat: no-repeat;
+
+}
+.left{
+  text-align: left;
+  position: fixed; top: 70%; right: 70%;
+  width: 19rem; height: 5rem;
+  transform: translate(-8rem, 0rem);
+  transform: skewY(-3deg);
+}
+
+ .avatar{
+  float: left;
+
+ }
+
+ .hp {
+   margin-top: 1.5rem;
+   font-family: Futura;
+   color: white;
+ }
+
+ .bars {
+  display: inline-block;
+  background-color: white;
+  float: left;
+  margin: 0rem;
+  border: .01rem solid black;
+  transform: skewY(-3deg);
+}
+
+.bars--max {
+  background-color:yellow;
+  display: inline-block;
+  float: left;
+  margin: 0rem;
+  border: .01rem solid black;
+  transform: skewY(-3deg);
+}
+
+ hr {
+   max-width: 9.5rem;
+   margin: 1.5rem 0rem 0rem 1rem;
+ }
+
+ .vert {
+   margin: -1rem 1rem 0rem 3rem;
+   max-width:  2rem;
+   transform: rotate(100deg);
+
+ }
+
+.right {
+  transform: skewY(3deg);
+  position: fixed; top: 66%; right: 5%;
+}
+
+.ammo {
+  color: white;
+  float: right;
 }
